[gd_scene load_steps=3 format=3 uid="uid://cofttv12cyud8"]

[ext_resource type="StyleBox" uid="uid://b7dw04famh27u" path="res://MenuPrincipal.tres" id="1_g4vov"]
[ext_resource type="Script" uid="uid://ik5l2lh8rep4" path="res://fila_pregunta.gd" id="2_8drxs"]

[node name="FilaPregunta" type="PanelContainer"]
custom_minimum_size = Vector2(80, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -30.0
offset_right = 142.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_g4vov")
script = ExtResource("2_8drxs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LabelInfo" type="Label" parent="HBoxContainer"]
modulate = Color(1, 0.98333335, 0, 1)
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="LabelPregunta" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1
autowrap_mode = 2

[node name="InputBorrador" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
placeholder_text = "#"
alignment = 1
